@@ -290,6 +290,11 @@ url = fullfile(fileparts(mfilename('fullpath')),'doc','cat.html');
 
 % open interactive help for newer version because display of html pages does not work anymore
 if cat_io_matlabversion > 20212
+  % SPM header image
+  F   = spm_figure('GetWin'); spm_figure('clear',F); 
+  imshow( fullfile( spm('Dir'), 'toolbox', 'cat12', 'html', 'images', 'CAT_Poster.jpg') , 'border', 'tight'); 
+  
+  % CAT help 
   pos = Fgraph.Position(3:4);
   web(url,'-noaddressbox','-new')
 else
