@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------
+r2448 | rdahnke | 2023-08-07 16:47:25
+
+Changed paths:
+ M CHANGES.txt
+ M spm_cat12.m
+
+1)  Changed:   Added poster background.------------------------------------------------------------------------
 r2447 | rdahnke | 2023-08-07 16:22:47
 
 Changed paths:
